--- a/showversion.yml
+++ b/showversion.yml
@@ -5,6 +5,7 @@
   
   tasks:
 
-  - name: run show version on remote devices
+   - name: run show version and check to see if output contains Dell
     dellos6_command:
       commands: show version
+      wait_for: result[0] contains Dell
